Implement updating current_item
